# apps/go_backend/docs/swagger/swagger.json
@@ -409,6 +409,12 @@
                         "description": "Items to skip (default 0)",
                         "name": "offset",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search by category name",
+                        "name": "search",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -3214,13 +3220,13 @@
             "properties": {
                 "color": {
                     "type": "string",
-                    "maxLength": 50,
-                    "minLength": 1,
+                    "maxLength": 20,
+                    "minLength": 4,
                     "example": "#3B82F6"
                 },
                 "name": {
                     "type": "string",
-                    "maxLength": 100,
+                    "maxLength": 40,
                     "minLength": 1,
                     "example": "Work"
                 }
@@ -3232,13 +3238,13 @@
             "properties": {
                 "color": {
                     "type": "string",
-                    "maxLength": 50,
-                    "minLength": 1,
+                    "maxLength": 20,
+                    "minLength": 4,
                     "example": "#10B981"
                 },
                 "name": {
                     "type": "string",
-                    "maxLength": 100,
+                    "maxLength": 40,
                     "minLength": 1,
                     "example": "Personal"
                 }
